--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <section class="white-section">
     <div class="about-us">
       <h3 class="feature-title">Wer wir sind</h3>
-      <p>Das P-Seminar "Scientific Lifehacks" war ein Projekt von 2021 bis 2022, wo eine Gruppe Oberstufenschüler naturfreundliche Hygieneprodukte designt hat. Das Ziel ist es, diese Artikel so zu gestalten, dass jeder diese zuhause selbst herstellen kann. Diese Website ist die Sammlung aller Projekte inklusive der Anleitungen.</p>
+      <p>Das P-Seminar "Scientific Lifehacks" war ein Projekt von 2021 bis 2022, in der eine Gruppe Oberstufenschüler*innen naturfreundliche Hygieneprodukte designt hat. Das Ziel ist es, diese Artikel so zu gestalten, dass jeder diese zuhause selbst herstellen kann. Diese Website ist die Sammlung aller Projekte inklusive der Anleitungen.</p>
     </div>
   </section>
 
