new Lifehacks schuck und reiniger

--- a/lifehacks.html
+++ b/lifehacks.html
@@ -93,6 +93,20 @@
             </a>
           </div>
 
+          <div class="col project-overview">
+            <a href="badUndKüchenreiniger.html" class="project-link">
+              <h3>Bad und Küchenreiniger</h3>
+              <!--<img class="overview-img" src="imgs/lifehacks/badUndKÜchenreiniger.jpeg" alt="Schere schleifen"> -->
+            </a>
+          </div>
+
+          <div class="col project-overview">
+            <a href="schmuckEntrosten.html" class="project-link">
+              <h3>Schmuck Entrosten</h3>
+              <!--<img class="overview-img" src="imgs/lifehacks/badUndKÜchenreiniger.jpeg" alt="Schere schleifen"> -->
+            </a>
+          </div>
+
         </div>
 
       </section>
